* Fix gis_location_lx_represent * Filter Beneficiary Location by project * Beneficiary Report by Years (Search widget still needs fixing) * Ensure Date Selector icon is to the right in IFRC theme (with spacing)

--- a/static/styles/IFRC/sahana.css
+++ b/static/styles/IFRC/sahana.css
@@ -264,7 +264,7 @@ div.form-container form p.note {
 div.form-container form input,
 div.form-container form select {
     padding: 1px;
-    margin: 2px 0 2px 0;
+    margin: 2px 3px 2px 0;
 }
 div.form-container form input[type="checkbox"],
 div.form-container form input[type="radio"] {
