--- a/static/styles/IFRC/style.css
+++ b/static/styles/IFRC/style.css
@@ -186,8 +186,12 @@ table tr.even td{background:#fff;}
 table tr td.white-cell,table tr th.white-cell{background:#fff;border-right:0px #9C9C9C dashed;}
 table tr th.edit-delete-col{width:50px;background:url(../../img/ifrc/edit_delete.png) no-repeat bottom; text-indent:-99999px;}
 table td .num_volunteers{color:#D80541;}
-table td .date{display:block;font-weight:bold;}
-table td .time{display:block;}
+table td .date{
+	/*display:block;*/
+	font-weight:bold;}
+/*table td .time{
+	display:block;
+	}*/
 table td input[type="text"],table td select{background:#fff;font-size:0.9em;border:1px solid #ccc;}
 .edit-button{float:left;margin-right:5px;display:block;background:url(../../img/ifrc/table_controls.png) 0 0;width:20px;height:30px;text-indent:-99999px;}
 .delete-button{float:left;display:block;background:url(../../img/ifrc/table_controls.png) -22px 0;width:20px;height:30px;text-indent:-99999px;}
